--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -236,7 +236,7 @@
 
         <script>
             function redirectToPage() {
-                const clearedUrl = "http://localhost:3000/inventory";
+                const clearedUrl = "/inventory";
                 const currentUrl = window.location.href;
                 
                 if (currentUrl !== clearedUrl) {
