--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -53,7 +53,7 @@
 
                 <script>
                     function redirectToPage() {
-                        const clearedUrl = "http://localhost:3000/archive";
+                        const clearedUrl = "/project-assign";
                         const currentUrl = window.location.href;
                         const word = "search"
                         const clear = document.querySelector('#clear-search');
