--- a/views/batchsheet.hbs
+++ b/views/batchsheet.hbs
@@ -224,18 +224,6 @@
 
 
                 <div class="exclude-pdf">
-                    
-                    {{#unless sufficient}}
-                    <div>
-                    <p>NOTE: You are lacking the ingredients to produce {{amount}} grams of this formula. The maximum amount you can make is {{maxVal}} grams.</p>
-                    </div>
-                    {{/unless}}
-
-                    {{#unless formulaComplete}}
-                    <div>
-                        <p>WARNING: Formula ingredients do not sum to 100%. Please return and edit formula.</p>
-                    </div>
-                    {{/unless}}
 
                     {{#ifBothTrue sufficient formulaComplete}}
                     <div class="row exclude-pdf">
@@ -369,6 +357,25 @@
       doc.save('Batchsheet.pdf');
     });
   });
+</script>
+
+{{#if messages}}
+<div style = "position: fixed;top: 60px;right: 20px;">
+    {{#each messages}}
+    <div class = "flash-message" style="background-color: #ffcdd2;padding: 10px;margin-bottom: 10px; border-radius: 5px;box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);word-wrap: break-word;max-width:300px;">
+        <p>{{this}}</p>
+    </div>
+    {{/each}}
+</div>
+{{/if}}
+
+<script>
+    var flashMessages = document.querySelectorAll('.flash-message');
+    flashMessages.forEach(function(flashMessage, index) {
+        setTimeout(function() {
+        flashMessage.style.display = 'none';
+        }, (index + 1) * 5000);
+    });
 </script>
 
 
