batchsheet back button

--- a/views/batchsheet.hbs
+++ b/views/batchsheet.hbs
@@ -48,8 +48,8 @@
                 <div>
                     <h1>{{project_name}} Formulas </h1>
 
-                    <div  class="exclude-pdf">
-                        <a href = "/projects/" + {{project_id}} class="btn waves-effect waves-luluble-pink luluble-pink">BACK</a>
+                    <div class="exclude-pdf">
+                        <a href = "/formulas/{{this.project_id}}" class="btn waves-effect waves-luluble-pink luluble-pink">BACK</a>
                     </div>
 
                     {{!-- <button id = "back_button" class="btn waves-effect waves-luluble-pink luluble-pink"><a href = "/projects/" + {{project_id}}>BACK</a></button> --}}
