--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/styles/color.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
         <script type="text/javascript" src="/routes/procedure.js"></script>
+        <script type="text/javascript" src="/routes/procedure_client.js"></script>
     </head>
 
     <style>
@@ -147,11 +149,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
         
      
-        <script>
-            $(document).ready(function() {
-                $('.modal').modal();
-            });
-        </script>
+      
 
         <script>
             $(document).ready(function() {
