Project assign add scientist

--- a/views/project_assign.hbs
+++ b/views/project_assign.hbs
@@ -281,7 +281,15 @@
                             <option value="0" {{isSelected "Scientist" role}}>Scientist</option>
                             <option value="1" {{isSelected "Admin" role}}>Admin</option>
                         </select>
-                        <p> </p>
+                        <p> &nbsp;</p>
+
+                        <div class="add_scientist_button">
+                                    <button id="add_scientist_button" 
+                                    name="add_scientist_button" 
+                                    type="submit" 
+                                    class="btn waves-effect waves-luluble-pink luluble-pink">
+                                    Add Scientist</button>
+                                </div>
                     </form>
                 </article>
             </div>
