--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -24,7 +24,7 @@
         <div style="padding: 2% 2% 2% 1%" class="row">
             <div class="col s12">
                 <p></p>
-                <h1 id="inventoryTitle">Inventory HELLO </h1>
+                <h1 id="inventoryTitle">Inventory </h1>
 
                 {{!-- <button id="create-pdf-button">Create PDF</button> --}}
                 {{!-- <a id="create-pdf-button" class="btn waves-effect waves-luluble-pink luluble-pink">Create PDF</a> --}}
