--- a/views/error.hbs
+++ b/views/error.hbs
@@ -11,6 +11,7 @@
         <!-- https://materializecss.com/cards.html -->
         <div style="padding:20px; text-align: center;">
             <h1 style="color:#e700a2">Error: Not Found</h1>
+            <h2>If you have just created an account, check your email for a verification code.</h2>
             <button id="add_button" 
                                 name="add_button" 
                                 onclick="redirectToPage()"
