Procedure add + encoding search

--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="/styles/color.css">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
         <script type="text/javascript" src="/routes/procedure.js"></script>
         <script type="text/javascript" src="/routes/procedure_client.js"></script>
@@ -148,9 +149,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
         
-     
-      
-
         <script>
             $(document).ready(function() {
                 $("#add_proc_button").click(function() {
@@ -188,6 +186,12 @@
                 // Perform further actions with the edited content, phase, and column
             }
             });
+            });
+        </script>
+
+        <script>
+            $(document).ready(function() {
+                $('.modal').modal();
             });
         </script>
 
