--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -311,7 +311,7 @@
                                 </a>
                             </th>
                             {{/ifEitherTrue}}
-                            <th id="trade">Ingredient ID
+                            <th id="trade">Encoding
                                 <a id="sort-trade-button" class="waves-effect">
                                     <i class="large material-icons" style="font-size: 20px">arrow_drop_down</i>
                                 </a>
