--- a/views/batchsheet.hbs
+++ b/views/batchsheet.hbs
@@ -224,7 +224,7 @@
                     <h8 style="color: red;">Note that these changes CANNOT BE REVERSED.</h8>
                     </div>
                     <div class="modal-footer">
-                    <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/projects/{{project_id}}/{{trial_num}}/{{amount}}/makeformsubmit">YES</a>
+                    <a class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger" href="/batchsheet/{{project_id}}/{{trial_num}}/{{amount}}/makeformsubmit">YES</a>
                     </div>
                 </div>
 
