--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -76,7 +76,13 @@
                 <tr>
                     <div class="row">
                         <div class="col s6">
-                            <a href="#openProc" class="btn waves-effect waves-light luluble-pink modal-trigger" style = "margin-left: 25px; margin-bottom: 10px">Add</a>
+                            <div class="col s1 m4 l2">
+                                <a href = "/formulas/{{this.project_id}}" class="btn waves-effect waves-luluble-pink luluble-pink">BACK</a>
+                            </div>
+
+                            <div class="col s2">
+                                <a href="#openProc" class="btn waves-effect waves-light luluble-pink modal-trigger" style = "margin-left: 25px; margin-bottom: 10px">Add</a>
+                            </div>
 
                             <div class="modal" id="openProc">
                                 <div style="padding: 5% 5% 5% 5%">
